# IPL

./: .env.example  .gitignore  auth.py  constants.py  database.py  main.py  migrate.py  models.py  pyproject.toml  requirements.txt  seed.py  test_upload.py  websocket_manager.py
_agent/: architecture.md  features.md  flow.md  match_5_lsg_vs_dc.json  prd.md  sample_match_schema.json  unfeature_prod.py  upload_to_prod.py
data/: ipl.db
routers/: admin_router.py  auth_router.py  chat_router.py  prediction_router.py  result_router.py  upload_router.py
static/: admin.html  chat.html  dashboard.html  history.html  index.html  upload.html
static/css/: style.css
static/js/: admin.js  auth.js  chat.js  dashboard.js  history.js  upload.js
